// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persists to/from customSynchronizer autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            2240063674,
          ],
        },
        "",
        528453758,
      ],
    },
    "",
    472051525,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1105394814,
          ],
        },
        "",
        2974635182,
      ],
    },
    "",
    2668639873,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1105394814,
          ],
        },
        "",
        2974635182,
      ],
    },
    "",
    2668639873,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        undefined,
        "Hc2DOD\\00008DKS9",
        3435431839,
      ],
    },
    "",
    2322087015,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSaves: initial 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from customSynchronizer autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from customSynchronizer loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    108401272,
  ],
]
`;

exports[`Persists to/from customSynchronizer saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from customSynchronizer saves 2`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            274319047,
          ],
        },
        "",
        4089057354,
      ],
    },
    "",
    3386696034,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from file autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        "￼",
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from file autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        "￼",
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from file autoSaves without race 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoSaves without race 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1105394814,
          ],
        },
        "",
        2974635182,
      ],
    },
    "",
    2668639873,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from file autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DOF@00008DKS9",
                1192138781,
              ],
            },
            "",
            3310464097,
          ],
        },
        "",
        3515591663,
      ],
    },
    "",
    2574369580,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOC800008DKS9",
        509480149,
      ],
    },
    "",
    3243196490,
  ],
]
`;

exports[`Persists to/from file autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DOF@00008DKS9",
                1192138781,
              ],
            },
            "",
            3310464097,
          ],
        },
        "",
        3515591663,
      ],
    },
    "",
    2574369580,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        "￼",
        "Hc2DOIH00008DKS9",
        4266814420,
      ],
    },
    "",
    979529979,
  ],
]
`;

exports[`Persists to/from file autoSaves: initial 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from file autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from file autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOC800008DKS9",
        509480149,
      ],
    },
    "",
    3243196490,
  ],
]
`;

exports[`Persists to/from file loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`Persists to/from file saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from file saves 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localStorage autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localStorage autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            274319047,
          ],
        },
        "",
        4089057354,
      ],
    },
    "",
    3386696034,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localStorage autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localStorage autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localStorage autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from localStorage autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        "￼",
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from localStorage autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        "￼",
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from localStorage autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DOAT00008DKS9",
                4230286480,
              ],
            },
            "",
            1065170459,
          ],
        },
        "",
        2627134724,
      ],
    },
    "",
    4007988216,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@b00008DKS9",
        28162626,
      ],
    },
    "",
    1174160861,
  ],
]
`;

exports[`Persists to/from localStorage autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DOAT00008DKS9",
                4230286480,
              ],
            },
            "",
            1065170459,
          ],
        },
        "",
        2627134724,
      ],
    },
    "",
    4007988216,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        "￼",
        "Hc2DOBF00008DKS9",
        4057189127,
      ],
    },
    "",
    2665377528,
  ],
]
`;

exports[`Persists to/from localStorage autoSaves: initial 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localStorage autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localStorage autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@b00008DKS9",
        28162626,
      ],
    },
    "",
    1174160861,
  ],
]
`;

exports[`Persists to/from localStorage loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`Persists to/from localStorage saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localStorage saves 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            2240063674,
          ],
        },
        "",
        528453758,
      ],
    },
    "",
    472051525,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1105394814,
          ],
        },
        "",
        2974635182,
      ],
    },
    "",
    2668639873,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1105394814,
          ],
        },
        "",
        2974635182,
      ],
    },
    "",
    2668639873,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DOAT00008DKS9",
                4230286480,
              ],
            },
            "",
            1065170459,
          ],
        },
        "",
        2627134724,
      ],
    },
    "",
    4007988216,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@b00008DKS9",
        28162626,
      ],
    },
    "",
    1174160861,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DOAT00008DKS9",
                4230286480,
              ],
            },
            "",
            1065170459,
          ],
        },
        "",
        2627134724,
      ],
    },
    "",
    4007988216,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        undefined,
        "Hc2DOBF00008DKS9",
        4057189127,
      ],
    },
    "",
    2665377528,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSaves: initial 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localSynchronizer autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@b00008DKS9",
        28162626,
      ],
    },
    "",
    1174160861,
  ],
]
`;

exports[`Persists to/from localSynchronizer loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    108401272,
  ],
]
`;

exports[`Persists to/from localSynchronizer saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from localSynchronizer saves 2`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            178816250,
          ],
        },
        "",
        910548496,
      ],
    },
    "",
    377805824,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            3469660222,
          ],
        },
        "",
        1206185190,
      ],
    },
    "",
    3354177867,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            3469660222,
          ],
        },
        "",
        1206185190,
      ],
    },
    "",
    3354177867,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        ,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        ,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: delCell changes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                undefined,
                "Hc2DOC800008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        ,
        "Hc2DOD\\00008DKS9",
        3435431839,
      ],
    },
    "",
    2322087015,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: delValue changes 1`] = `
[
  [
    {},
  ],
  [
    {
      "v2": [
        undefined,
        "Hc2DOD\\00008DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: initial 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: setTables changes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves: setValues changes 1`] = `
[
  [
    {},
  ],
  [
    {
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableChangesListener loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            274319047,
          ],
        },
        "",
        4089057354,
      ],
    },
    "",
    3386696034,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        ,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        ,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: delCell changes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                undefined,
                "Hc2DOC800008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        ,
        "Hc2DOD\\00008DKS9",
        3435431839,
      ],
    },
    "",
    2322087015,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: delValue changes 1`] = `
[
  [
    {},
  ],
  [
    {
      "v2": [
        undefined,
        "Hc2DOD\\00008DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: initial 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: setTables changes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves: setValues changes 1`] = `
[
  [
    {},
  ],
  [
    {
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableContentListener loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener saves 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            274319047,
          ],
        },
        "",
        4089057354,
      ],
    },
    "",
    3386696034,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        ,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                ,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        ,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: delCell changes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                undefined,
                "Hc2DOC800008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                ,
                "Hc2DOC800008DKS9",
                144954366,
              ],
            },
            "",
            1386578850,
          ],
        },
        "",
        52583769,
      ],
    },
    "",
    932979697,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        ,
        "Hc2DOD\\00008DKS9",
        3435431839,
      ],
    },
    "",
    2322087015,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: delValue changes 1`] = `
[
  [
    {},
  ],
  [
    {
      "v2": [
        undefined,
        "Hc2DOD\\00008DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: initial 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: setTables changes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
        3238529287,
      ],
    },
    "",
    2654901867,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves: setValues changes 1`] = `
[
  [
    {},
  ],
  [
    {
      "v2": [
        2,
        "Hc2DOAT00008DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`Persists to/from mockMergeableNoContentListener loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from sessionStorage autoLoads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from sessionStorage autoLoads 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000018DKS9",
                2669080357,
              ],
            },
            "",
            274319047,
          ],
        },
        "",
        4089057354,
      ],
    },
    "",
    3386696034,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from sessionStorage autoLoads 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from sessionStorage autoLoads 4`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000028DKS9",
                3252714811,
              ],
            },
            "",
            1416411412,
          ],
        },
        "",
        3704904231,
      ],
    },
    "",
    4008152259,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSave & autoLoad: roundtrip 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        undefined,
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSave & autoLoad: roundtrip 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        "￼",
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSave & autoLoad: roundtrip 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            3878961435,
          ],
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1042432012,
          ],
        },
        "",
        780295602,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                "￼",
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            2993345838,
          ],
        },
        "",
        740731165,
      ],
    },
    "",
    2541349452,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000048DKS9",
        1630348003,
      ],
      "v2": [
        "￼",
        "Hc2DO@000098DKS9",
        1159821978,
      ],
    },
    "",
    3529066855,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSaves: delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DOAT00008DKS9",
                4230286480,
              ],
            },
            "",
            1065170459,
          ],
        },
        "",
        2627134724,
      ],
    },
    "",
    4007988216,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@b00008DKS9",
        28162626,
      ],
    },
    "",
    1174160861,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSaves: delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                "￼",
                "Hc2DOAT00008DKS9",
                4230286480,
              ],
            },
            "",
            1065170459,
          ],
        },
        "",
        2627134724,
      ],
    },
    "",
    4007988216,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        "￼",
        "Hc2DOBF00008DKS9",
        4057189127,
      ],
    },
    "",
    2665377528,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSaves: initial 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSaves: setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from sessionStorage autoSaves: setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            3828687208,
          ],
        },
        "",
        3894592596,
      ],
    },
    "",
    2516100462,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@b00008DKS9",
        28162626,
      ],
    },
    "",
    1174160861,
  ],
]
`;

exports[`Persists to/from sessionStorage loads 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`Persists to/from sessionStorage saves 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Persists to/from sessionStorage saves 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Supported, MergeableStore Changes in setPersisted 1`] = `
[
  "[[{"t1":[{"r1":[{"c1":[1,"Hc2DO@000008DKS9"]}]}]}],[{}],1]",
  "[[{}],[{"v1":[1,"Hc2DO@000018DKS9"]}],1]",
]
`;

exports[`Supported, MergeableStore Content in setPersisted 1`] = `"[[{"t1":[{"r1":[{"c1":[1,"Hc2DO@000008DKS9",4065945599]},"",1279994494]},"",1293085726]},"",4033596827],[{"v1":[1,"Hc2DO@000008DKS9",4065945599]},"",2304392760]]"`;

exports[`Supported, MergeableStore loading from legacy 1`] = `"[[{"t1":[{"r1":[{"c1":[1,"Hc2DO@000008DKS9",4065945599]},"",3278308926]},"",608074644]},"",3689956797],[{"v1":[1,"Hc2DO@000018DKS9",3207404266]},"",445733406]]"`;
